--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 navbar-nav-scroll">
             <li class="nav-item">
-              <a class="nav-link active p-lg-3" href="#landing-sec">Home</a>
+              <a class="nav-link active p-lg-3" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link p-lg-3" href="#features-sec">Services</a>
